CARE/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    PATIENT
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> function
Rule 2     program -> create_patient
Rule 3     program -> add_symptoms
Rule 4     program -> list_symptoms
Rule 5     program -> diagnose_patient
Rule 6     function -> ID
Rule 7     create_patient -> ID PERIOD LP RP
Rule 8     add_symptoms -> ID PERIOD ID LP ID RP
Rule 9     list_symptoms -> ID PERIOD ID LP RP
Rule 10    diagnose_patient -> ID PERIOD ID

Terminals, with rules where they appear

FALSE                : 
ID                   : 6 7 8 8 8 9 9 10 10
LP                   : 7 8 9
PATIENT              : 
PERIOD               : 7 8 9 10
RP                   : 7 8 9
TRUE                 : 
error                : 

Nonterminals, with rules where they appear

add_symptoms         : 3
create_patient       : 2
diagnose_patient     : 5
function             : 1
list_symptoms        : 4
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function
    (2) program -> . create_patient
    (3) program -> . add_symptoms
    (4) program -> . list_symptoms
    (5) program -> . diagnose_patient
    (6) function -> . ID
    (7) create_patient -> . ID PERIOD LP RP
    (8) add_symptoms -> . ID PERIOD ID LP ID RP
    (9) list_symptoms -> . ID PERIOD ID LP RP
    (10) diagnose_patient -> . ID PERIOD ID

    ID              shift and go to state 7

    program                        shift and go to state 1
    function                       shift and go to state 2
    create_patient                 shift and go to state 3
    add_symptoms                   shift and go to state 4
    list_symptoms                  shift and go to state 5
    diagnose_patient               shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> function .

    $end            reduce using rule 1 (program -> function .)


state 3

    (2) program -> create_patient .

    $end            reduce using rule 2 (program -> create_patient .)


state 4

    (3) program -> add_symptoms .

    $end            reduce using rule 3 (program -> add_symptoms .)


state 5

    (4) program -> list_symptoms .

    $end            reduce using rule 4 (program -> list_symptoms .)


state 6

    (5) program -> diagnose_patient .

    $end            reduce using rule 5 (program -> diagnose_patient .)


state 7

    (6) function -> ID .
    (7) create_patient -> ID . PERIOD LP RP
    (8) add_symptoms -> ID . PERIOD ID LP ID RP
    (9) list_symptoms -> ID . PERIOD ID LP RP
    (10) diagnose_patient -> ID . PERIOD ID

    $end            reduce using rule 6 (function -> ID .)
    PERIOD          shift and go to state 8


state 8

    (7) create_patient -> ID PERIOD . LP RP
    (8) add_symptoms -> ID PERIOD . ID LP ID RP
    (9) list_symptoms -> ID PERIOD . ID LP RP
    (10) diagnose_patient -> ID PERIOD . ID

    LP              shift and go to state 10
    ID              shift and go to state 9


state 9

    (8) add_symptoms -> ID PERIOD ID . LP ID RP
    (9) list_symptoms -> ID PERIOD ID . LP RP
    (10) diagnose_patient -> ID PERIOD ID .

    LP              shift and go to state 11
    $end            reduce using rule 10 (diagnose_patient -> ID PERIOD ID .)


state 10

    (7) create_patient -> ID PERIOD LP . RP

    RP              shift and go to state 12


state 11

    (8) add_symptoms -> ID PERIOD ID LP . ID RP
    (9) list_symptoms -> ID PERIOD ID LP . RP

    ID              shift and go to state 13
    RP              shift and go to state 14


state 12

    (7) create_patient -> ID PERIOD LP RP .

    $end            reduce using rule 7 (create_patient -> ID PERIOD LP RP .)


state 13

    (8) add_symptoms -> ID PERIOD ID LP ID . RP

    RP              shift and go to state 15


state 14

    (9) list_symptoms -> ID PERIOD ID LP RP .

    $end            reduce using rule 9 (list_symptoms -> ID PERIOD ID LP RP .)


state 15

    (8) add_symptoms -> ID PERIOD ID LP ID RP .

    $end            reduce using rule 8 (add_symptoms -> ID PERIOD ID LP ID RP .)

